# librarian

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: pull_request_template.md  python.yml
librarian/: agent.py  cli.py  const.py  embedding.py  ingester.py  logging_util.py
librarian/dev/: README.md  docker-compose.yaml
src/: agent.py
