[project]
name = "librarian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch[async]>=9.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "markitdown[pdf]>=0.1.3",
]

[dependency-groups]
dev = [
    "pyrefly>=0.33.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.uv]
package = true
